tests/neg/wildcard-imports/B.scala
package test

object B:
  def foo: Int = 0
